@startuml EventDispatching
allow_mixing
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam roundcorner 8
skinparam noteBackgroundColor #FAFAFA
hide empty members

' ═══════════════════════════════════
'  cafe-beans
' ═══════════════════════════════════
package "cafe-beans" {

    class EventHub {
        + send(annotationType : Class<A>, args : Object...)
        + sendTo(annotationType : Class<A>, target : Object, args : Object...)
        + dispatcher(annotationType : Class<A>) : EventDispatcher<A>
        + register(annotationType : Class<A>, dispatcher : EventDispatcher<A>)
    }

    interface "EventDispatcher<A extends Annotation>" as EventDispatcher {
        + register(listener : Object)
        + unregister(listener : Object)
        --
        + send(args : Object...)
        + sendTo(target : Object, args : Object...)
    }

    class "DefaultEventDispatcher<A>" as DefaultEventDispatcher {
        - annotationType : Class<A>
        - invoker : HandlerMethodInvoker
    }

    class HandlerMethodInvoker {
        + dispatch(annotationType, args)
        + dispatchAll(annotationType, args)
        + dispatchTo(annotationType, target, args)
    }

    class CafeHandlerSelector {
        + isMatch(key, annotationType, params) : boolean
    }

    annotation "@CafeHandler" as CafeHandlerAnnotation
}

' ═══════════════════════════════════
'  cafe-desktop
' ═══════════════════════════════════
package "cafe-desktop" {

    interface CafeEventHandlerHub {
        + sendToActive(args : Object...)
        + dispatchMenuEvent(event : Object, menuItem : MenuItemModel)
    }

    class MenuItemEventDispatcher {
        - invoker : HandlerMethodInvoker
        - application : ApplicationComponent
    }

    class ApplicationComponent {
        + setLogicallyActive(container : ContainerComponent)
        + getActiveContainer() : ContainerComponent
    }

    class MenuItemModel {
        + eventType : Class<?>
        + listeners : List<Class<? extends Component>>
    }

    annotation "@CafeEventHandler" as CafeEventHandlerAnnotation
}

' ═══════════════════════════════════
'  Triggers (external callers)
' ═══════════════════════════════════
rectangle "Menu\nSelectionListener" as MenuTrigger
rectangle "Embedded Control\n(table row, button)" as EmbeddedControl
rectangle "Bean / Service" as BeanCaller

' ═══════════════════════════════════
'  Hierarchy
' ═══════════════════════════════════
DefaultEventDispatcher     ..|>  EventDispatcher
CafeEventHandlerHub        -up-|> EventDispatcher     : extends
MenuItemEventDispatcher ..|>  CafeEventHandlerHub

' ═══════════════════════════════════
'  EventHub selects and aggregates dispatchers
' ═══════════════════════════════════
EventHub o--> "0..*" EventDispatcher : selects & delegates

' ═══════════════════════════════════
'  Dependencies
' ═══════════════════════════════════
DefaultEventDispatcher     -->  HandlerMethodInvoker   : reflection invocation
MenuItemEventDispatcher -->  HandlerMethodInvoker   : reflection invocation
MenuItemEventDispatcher -->  ApplicationComponent   : reads logicallyActive
MenuItemEventDispatcher ..>  MenuItemModel
MenuItemEventDispatcher -->  EventHub               : registers self on init
HandlerMethodInvoker       -->  CafeHandlerSelector    : matches handlers

' ═══════════════════════════════════
'  Trigger call-sites
' ═══════════════════════════════════
MenuTrigger     -down->  CafeEventHandlerHub : dispatchMenuEvent(event, menuItem)
EmbeddedControl -down->  CafeEventHandlerHub : sendToActive(event)
BeanCaller      -down->  EventHub            : send(CafeHandler.class, event)

' ═══════════════════════════════════
'  Notes
' ═══════════════════════════════════
note right of EventHub
  Concrete class — global entry point.
  Selects the EventDispatcher registered
  for the given annotation type, then delegates.
  Callers that need type-specific methods
  (dispatchMenuEvent, sendToActive) inject
  CafeEventHandlerHub directly.
end note

note right of MenuItemEventDispatcher
  **dispatchMenuEvent routing:**
  listeners empty        → send(event)            // broadcast
  active ∈ listeners     → sendTo(active, event)  // targeted
  active ∉ listeners     → drop                   // item greyed

  **sendToActive:**
  sendTo(logicallyActive, args)
end note

note bottom of HandlerMethodInvoker
  Reflection-based method invocation.
  dispatch()     — first match only (legacy)
  dispatchAll()  — fan-out to all matching handlers
  dispatchTo()   — restrict to target instance
end note

note bottom of EventDispatcher
  **Three routing dimensions**
  1. Annotation type A  → EventHub selects dispatcher
  2. args types         → CafeHandlerSelector matches handler parameters
  3. send / sendTo      → broadcast or targeted (by instance)
end note

@enduml
